updating tipcalc